--- a/styles/sass/partials/_global.scss
+++ b/styles/sass/partials/_global.scss
@@ -12,6 +12,11 @@ li {
     list-style-type: none;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 .wrapper {
     width: 80%;
     max-width: 2160px;
