added background image and associated styles

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -1,5 +1,6 @@
 header {
     background: url(../../../assets/home-1.jpeg);
     background-size: cover;
+    background-position: center;
     height: 100vh;
 }
