--- a/styles/sass/partials/_navigation.scss
+++ b/styles/sass/partials/_navigation.scss
@@ -1,7 +1,31 @@
 .navigation {
     display: flex;
+    // background-color: hotpink;
+    justify-content: space-around;
+    align-items: center;
+    text-transform: uppercase;
+    font-family: $montserrat;
+
+    &__container {
+        width: 20%;
+    }
+
+    &__list {
+        // background-color: green;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 100%;
+        font-size: .7rem;
+    }
+
+    &__logo {
+        font-size: 2rem;
+        font-weight: bold;
+        // background: chocolate;
+    }
 }
 
-.navigation__list {
-    display: flex;
-}
+
+
+
