--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,4 +1,5 @@
-@import './partials/variables', './partials/global', './partials/header', './partials/navigation';
+@import './partials/variables', './partials/global', 
+'./partials/header', './partials/navigation', './partials/utilities';
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
