--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,5 +1,6 @@
 @import './partials/variables', './partials/global', 
-'./partials/header', './partials/navigation', './partials/utilities';
+'./partials/header', './partials/navigation', './partials/utilities',
+'./partials/branding';
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
