--- a/styles/sass/partials/_slider.scss
+++ b/styles/sass/partials/_slider.scss
@@ -8,16 +8,22 @@
         margin: auto;
         font-style: italic;
     }
+
+    .wrapper {
+        // background: chocolate;
+        padding: 100px 0;
+    }
 }
 
 .slider-container {
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: space-around;
+    align-items: flex-end;
     padding: 100px 0 50px 0;
 
     .fa-angle-left, .fa-angle-right {
-        font-size: 2rem;
+        font-size: 2.5rem;
+        margin-bottom: 50px;
     }
 
     &--image {
