--- a/styles/sass/partials/_navigation.scss
+++ b/styles/sass/partials/_navigation.scss
@@ -19,10 +19,37 @@
         font-size: .7rem;
     }
 
+    &__list .link {
+        position: relative;
+    }
+
+    &__list .link:hover::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 1px;
+        background: $black;
+        bottom: -2px;
+        left: 0;
+        animation: grow 0.5s forwards;
+    }
+
+    &__list .fa-shopping-bag {
+        position: relative;
+    }
+
     &__logo {
         font-size: 2rem;
         font-weight: bold;
         // background: chocolate;
+    }
+}
+
+@keyframes grow {
+    from {
+        width: 0%;
+    } to {
+        width: 100%;
     }
 }
 
