--- a/styles/style.css
+++ b/styles/style.css
@@ -114,7 +114,27 @@ header {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 50px;
+  position: relative;
+  background: blueviolet;
+  margin: auto;
+  width: 100%;
+  max-width: 40%;
+}
+
+.homeImg-2 {
+  width: 100%;
+  margin: 40px;
+}
+
+.circle {
+  max-width: 100%;
+  position: absolute;
+  left: calc(-5% + 1px);
+  top: -85px;
+}
+
+.circle-img {
+  max-width: 100%;
 }
 
 .container {
@@ -143,6 +163,22 @@ header {
   line-height: 30px;
 }
 
+.image-container-2 {
+  background-color: chocolate;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 500px;
+}
+
+.home-img-2 {
+  width: 20%;
+}
+
+.circle-img-2 {
+  width: 20%;
+}
+
 #slider {
   background: #F6F6F6;
   font-family: "Open Sans", sans-serif;
@@ -153,24 +189,96 @@ header {
   margin: auto;
   font-style: italic;
 }
+#slider .wrapper {
+  padding: 100px 0;
+}
 
 .slider-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   padding: 100px 0 50px 0;
 }
 .slider-container .fa-angle-left, .slider-container .fa-angle-right {
-  font-size: 2rem;
+  font-size: 2.5rem;
+  margin-bottom: 50px;
 }
 .slider-container--image {
   border-radius: 50%;
+}
+
+#features {
+  background: url(../../../assets/home-4.jpeg);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  height: 100vh;
+}
+
+.features--container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 60%;
+}
+
+.inner-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 90%;
+  padding: 40px 0;
+}
+
+.content--container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.feature-content h3 {
+  text-transform: uppercase;
+  font-family: "Open Sans", sans-serif;
+  font-weight: normal;
+  margin-bottom: 10px;
+}
+.feature-content p {
+  font-family: "Open Sans", sans-serif;
+  width: 80%;
+}
+
+.icon-container {
+  border-radius: 50%;
+  border: 2px solid black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100px;
+  height: 60px;
+  margin-right: 20px;
 }
 
 * {
