fixed small error

--- a/styles/sass/partials/_features.scss
+++ b/styles/sass/partials/_features.scss
@@ -24,10 +24,10 @@
 .content--container {
     display: flex;
 
-    .fas {
-        // margin-right: 20px;
-        // position: relative;
-    }
+    // .fas {
+    //     // margin-right: 20px;
+    //     // position: relative;
+    // }
 
     // .fas::after {
     //     content: "";
