--- a/styles/sass/partials/_slider.scss
+++ b/styles/sass/partials/_slider.scss
@@ -7,6 +7,7 @@
         text-align: center;
         margin: auto;
         font-style: italic;
+        line-height: 30px;
     }
 
     .wrapper {
