--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,6 +1,7 @@
 @import './partials/variables', './partials/global', 
 './partials/header', './partials/navigation', './partials/utilities',
-'./partials/branding', './partials/slider.scss', './partials/features';
+'./partials/branding', './partials/slider.scss', './partials/features',
+'./partials/team';
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
