--- a/styles/style.css
+++ b/styles/style.css
@@ -188,6 +188,7 @@ header {
   text-align: center;
   margin: auto;
   font-style: italic;
+  line-height: 30px;
 }
 #slider .wrapper {
   padding: 100px 0;
@@ -280,6 +281,45 @@ header {
   width: 100px;
   height: 60px;
   margin-right: 20px;
+}
+
+#team {
+  background: #F6F6F6;
+}
+#team h3 {
+  text-align: center;
+}
+
+.team__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.team__container--description {
+  max-width: 540px;
+  height: 270px;
+  background: #C3DAB7;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.team__container--join {
+  background: chartreuse;
+  width: 100%;
+  max-width: 270px;
+  height: 270px;
 }
 
 * {
