updated html and css

--- a/styles/sass/partials/_team.scss
+++ b/styles/sass/partials/_team.scss
@@ -14,7 +14,7 @@
     &--description {
         max-width: 540px;
         height: 270px;
-        background: $lightSage;
+        background: aqua;
         display: flex;
         justify-content: flex-end;
         flex-direction: column;
