--- a/styles/style.css
+++ b/styles/style.css
@@ -303,7 +303,7 @@ header {
 .team__container--description {
   max-width: 540px;
   height: 270px;
-  background: #C3DAB7;
+  background: aqua;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -320,6 +320,50 @@ header {
   width: 100%;
   max-width: 270px;
   height: 270px;
+}
+
+#contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.contact__content {
+  background: #C3DAB7;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 200px;
+}
+.contact__content h4 {
+  text-transform: uppercase;
+}
+.contact__content p {
+  text-align: center;
+  line-height: 30px;
+  margin: 50px 0;
+}
+.contact__content button {
+  width: 200px;
+  height: 50px;
+  background: #FFF;
+  border: none;
+  text-transform: upppercase;
+}
+
+#footer {
+  background: #333;
+  color: #F6F6F6;
 }
 
 * {
