added styles for blog header

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -1,6 +1,14 @@
-header {
+
+#header-main {
     background: url(../../../assets/home-1.jpeg);
     background-size: cover;
     background-position: center;
     height: 100vh;
+}
+
+#header-blog {
+  background: url(../../../assets/blog-1.jpeg);
+  background-size: cover;
+    background-position: center;
+    height: 100vh;  
 }
