updated blog page

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,7 +1,7 @@
 @import './partials/variables', './partials/global', 
 './partials/header', './partials/navigation', './partials/utilities',
 './partials/branding', './partials/slider.scss', './partials/features',
-'./partials/team', './partials/contact', './partials/footer';
+'./partials/team', './partials/contact', './partials/footer', './partials/blog';
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
