added more styling

--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -50,9 +50,9 @@
             }
         }
         
-        &--date {
+        // &--date {
 
-        }
+        // }
 
         &--category {
             margin: 0 50px;
