--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -1,30 +1,31 @@
-#contact {
+.contact {
     display: flex;
+
+    &__content {
+        background: $lightSage;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 200px;
+
+        h4 {
+            text-transform: uppercase;
+        }
+
+        p {
+            text-align: center;
+            line-height: 30px;
+            margin: 50px 0;
+        }
+
+        button {
+            width: 200px;
+            height: 50px;
+            background: $white;
+            border: none;
+            text-transform: upppercase;
+        }
+    }
 }
 
-.contact__content {
-    background: $lightSage;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 200px;
-
-    h4 {
-        text-transform: uppercase;
-    }
-
-    p {
-        text-align: center;
-        line-height: 30px;
-        margin: 50px 0;
-    }
-
-    button {
-        width: 200px;
-        height: 50px;
-        background: $white;
-        border: none;
-        text-transform: upppercase;
-    }
-}
