--- a/styles/sass/partials/_features.scss
+++ b/styles/sass/partials/_features.scss
@@ -1,71 +1,55 @@
-#features {
+.features {
     background: url(../../../assets/home-4.jpeg);
     display: flex;
     justify-content: flex-end;
     height: 100vh;
-}
 
-.features--container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: center;
-    width: 60%;
-    // background-color: crimson;
-}
+    &__container {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-content: center;
+        width: 60%;
 
-.inner-container {
-    display: flex;
-    width: 90%;
-    // background-color: coral;
-    padding: 40px 0;
-}
+        &--inner {
+            display: flex;
+            width: 90%;
+            padding: 40px 0;
+        }
 
-.content--container {
-    display: flex;
+        &--content {
+            display: flex;
+        }
 
-    // .fas {
-    //     // margin-right: 20px;
-    //     // position: relative;
-    // }
+        &--icon {
+            border-radius: 50%;
+            border: 2px solid black;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100px;
+            height: 60px;
+            margin-right: 20px;
+        }
 
-    // .fas::after {
-    //     content: "";
-    //     height: 50px;
-    //     width: 50px;
-    //     border: 2px solid black;
-    //     position: absolute;
-    //     border-radius: 50%;
-    //     top: -15px;
-    //     left: -20px;
-    // }
-}
+        &--copy {
+            
+            h3 {
+                text-transform: uppercase;
+                font-family: $openSans;
+                font-weight: normal;
+                margin-bottom: 10px;
+            }
 
-.feature-content {
-    // background-color: darkcyan;
-
-    h3 {
-        text-transform: uppercase;
-        font-family: $openSans;
-        font-weight: normal;
-        margin-bottom: 10px;
-    }
-
-    p {
-        font-family: $openSans;
-        width: 80%;
+            p {
+                font-family: $openSans;
+                width: 80%;
+            }
+        }
     }
 }
 
-.icon-container {
-    border-radius: 50%;
-    border: 2px solid black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100px;
-    height: 60px;
-    margin-right: 20px;
-}
+
+
 
 
