--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -20,10 +20,11 @@
             margin: 20px 0;
         }
     }
+
+    &__logo {
+        text-align: center;
+        padding: 50px 0;
+        border-top: 1px solid $offWhite;
+    }   
 }
 
-.footer__logo {
-    text-align: center;
-    padding: 50px 0;
-    border-top: 1px solid $offWhite;
-}
