--- a/styles/sass/partials/_slider.scss
+++ b/styles/sass/partials/_slider.scss
@@ -16,7 +16,7 @@
     }
 }
 
-.slider-container {
+.slider__container {
     display: flex;
     justify-content: space-around;
     align-items: flex-end;
