--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -3,6 +3,7 @@ $lightSage: #C3DAB7;
 $white: #FFF;
 $offWhite: #F6F6F6;
 $black: #333;
+$lightGrey: #999;
 
 // Fonts
 $montserrat: 'Montserrat', sans-serif;
