--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,19 @@ html {
   font-size: 125%;
 }
 
+body p {
+  font-size: 0.875rem;
+  font-family: "Open Sans", sans-serif;
+  line-height: 24px;
+  letter-spacing: 0.3px;
+}
+
+h3, h4, h5 {
+  font-family: "Montserrat", sans-serif;
+  letter-spacing: 1.8px;
+  font-weight: normal;
+}
+
 li {
   list-style-type: none;
 }
@@ -192,10 +205,11 @@ a {
 }
 
 #slider {
-  background: #F6F6F6;
+  background: #FFF;
   font-family: "Open Sans", sans-serif;
 }
 #slider p {
+  color: #333;
   width: 50%;
   text-align: center;
   margin: auto;
@@ -221,12 +235,16 @@ a {
   font-size: 2.5rem;
   margin-bottom: 50px;
 }
+.slider__container .fa-angle-left:hover, .slider__container .fa-angle-right:hover {
+  opacity: 0.5;
+}
 .slider__container--image {
   border-radius: 50%;
 }
 
 .features {
-  background: url(../../../assets/home-4.jpeg);
+  background: url(../../../assets/home-4.jpeg) no-repeat;
+  background-size: cover;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -287,11 +305,12 @@ a {
 }
 .features__container--copy p {
   font-family: "Open Sans", sans-serif;
+  color: #999;
   width: 80%;
 }
 
 .team {
-  background: #F6F6F6;
+  background: #FFF;
 }
 .team h3 {
   text-align: center;
@@ -309,23 +328,41 @@ a {
 .team__container--description {
   max-width: 540px;
   height: 270px;
-  background: aqua;
+  background: #F6F6F6;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  padding: 50px;
+}
+.team__container--description h4 {
+  margin-bottom: 20px;
 }
 .team__container--join {
-  background: chartreuse;
+  text-transform: uppercase;
   width: 100%;
   max-width: 270px;
   height: 270px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-family: "Open Sans", sans-serif;
+  padding: 50px;
+  text-align: center;
+  letter-spacing: 0.3px;
+  font-size: 0.875rem;
 }
 
 .contact {
