--- a/styles/sass/partials/_features.scss
+++ b/styles/sass/partials/_features.scss
@@ -28,24 +28,31 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 100px;
+            width: 110px;
             height: 60px;
-            margin-right: 20px;
+            margin-right: 30px;
+
+            i {
+                font-size: 1.5rem;
+            }
         }
 
         &--copy {
             
             h3 {
                 text-transform: uppercase;
-                font-family: $openSans;
+                font-family: $montserrat;
+                color: $black;
                 font-weight: normal;
-                margin-bottom: 10px;
+                margin-bottom: 20px;
+                letter-spacing: 0.3px;
             }
 
             p {
                 font-family: $openSans;
                 color: $lightGrey;
                 width: 80%;
+                line-height: 30px;
             }
         }
     }
