--- a/styles/sass/partials/_global.scss
+++ b/styles/sass/partials/_global.scss
@@ -8,7 +8,7 @@ html {
     font-size: 125%;
 }
 
-body p {
+body p, ul, label {
     font-size: .875rem;
     font-family: $openSans;
     line-height: 24px;
