fixed some styling for blog.html

--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -1,18 +1,33 @@
-.wrapper {
-        width: 70%;
-}
 
 .article {
+    .wrapper {
+        width: 70%;
+    }
+
     // background: coral;
     font-family: $openSans;
 
-    &__information--container {
+     &__link {
+        margin: 20px 0 100px 0;
+
+        a {
+            color: $lightGrey;
+        }
+    }
+
+    &__container {
         display: flex;
         justify-content: space-between;
         position: relative;
     }
 
-    &__information--container::after {
+    h2 {
+        padding: 100px 0 0 0;
+    }
+
+    
+
+    &__container::after {
         content: "";
         position: absolute;
         width: 100%;
@@ -26,40 +41,45 @@
         font-weight: normal;
     }
 
-    &__link {
-        margin: 20px 0 100px 0;
+    &__author {
+        display: flex;
+        align-items: center;
+
+        img {
+            border-radius: 50%;
+            margin-right: 40px;
+        }
+
+        &--info p {
+            font-weight: normal;
+            color: $lightGrey;        
+        }
     }
+
+    &__date p, 
+    &__tags p {
+        color: $lightGrey;
+    }
+   
+     &__category {
+            margin: 0 50px;
+            p {
+                color: $lightGrey;
+            }
+        }
 
     &__information {
         display: flex;
         align-items: center;
 
-        &--author {
-            display: flex;
-            align-items: center;
-
-            img {
-            border-radius: 50%;
-            margin-right: 40px;
-        }
-
-            &--info {
-            font-weight: normal;
-            
-                
-            }
-        }
         
-        // &--date {
 
-        // }
+           
 
-        &--category {
-            margin: 0 50px;
-        }
+       
     }
 
-    h2 {
+       h2 {
         text-transform: uppercase;
         font-family: $montserrat;
         font-size: 3.5rem;
@@ -68,8 +88,12 @@
 
     &__content {
         // background: chocolate;
+        p {
+            color: $lightGrey;
+        }
         
         p:first-of-type {
+            color: $black;
             font-weight: bold;
             padding: 100px 0 0 0;
         }
@@ -101,6 +125,8 @@
         }
     }
 }
+
+ 
 
 .posts {
     display: flex;
