--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -6,7 +6,7 @@
     height: 100vh;
 }
 
-#header-blog {
+#header__blog {
   background: url(../../../assets/blog-1.jpeg);
   background-size: cover;
     background-position: center;
