--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -99,20 +99,21 @@
         }
         
         p:nth-of-type(2) {
-            padding: 50px 0;
+            padding: 30px 0;
         }
 
         p:nth-of-type(3) {
-            padding: 0 0 50px 0;
+            padding: 0 0 30px 0;
         }
 
         p:nth-of-type(4) {
-            padding: 0 0 50px 0;
+            padding: 0 0 30px 0;
         }
     }
 
     &__sm {
         display: flex;
+        padding: 0 0 30px 0;
         p {
             margin-right: 20px;
         }
@@ -127,15 +128,59 @@
 }
 
  
-
 .posts {
-    display: flex;
-    justify-content: space-between;
+    
+    h2 {
+        text-transform: uppercase;
+        font-family: $montserrat;
+        padding: 50px 0;
+        position: relative;
+    }
+
+    h2:after {
+        content: '';
+        height: 1px;
+        background: $lightGrey;
+        position: absolute;
+        width: 100%;
+        bottom: 30px;
+        left: 0;
+    }
+
+    &__container {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__post {
+        text-transform: uppercase;
+    }
+
+}
+
+.comments {
+    h2 {
+        font-family: $montserrat;
+        text-transform: uppercase;
+        padding: 100px 0 0 0;
+        position: relative;
+    }
+
+    h2:after {
+        content: '';
+        height: 1px;
+        background: $lightGrey;
+        position: absolute;
+        width: 100%;
+        bottom: -20px;
+        left: 0;
+    }
 }
 
 .comment {
     display: flex;
     margin: 50px 0;
+
 
     img {
             margin-right: 50px ;
@@ -144,5 +189,59 @@
     &__container {
         background: $offWhite;
         padding: 20px;
+    }
+
+    .comment {
+
+        &__name {
+            text-transform: uppercase;
+            font-size: 1rem;
+
+            span {
+                font-style: italic;
+                font-size: .8rem;
+                color: $lightGrey;
+            }
+        }
+
+        &__text {
+            padding: 10px 0;
+        }
+
+        &__date {
+            color: $lightGrey;
+        }
+    }
+}
+
+.comment__form {
+    h2 {
+        text-transform: uppercase;
+        font-family: $montserrat;
+        padding: 50px 0;
+        position: relative;
+    }
+
+    h2:after {
+        content: '';
+        height: 1px;
+        background: $lightGrey;
+        position: absolute;
+        width: 100%;
+        bottom: 30px;
+        left: 0;
+    }
+}
+
+#comment__form {
+    &--name, &--email, &--subject {
+        border-top-style: none;
+        border-left-style: none;
+        border-right-style: none;
+        border-bottom: 1px solid $lightGrey;
+    }
+
+    textarea {
+        display: block;
     }
 }
