--- a/styles/sass/partials/_contact-page.scss
+++ b/styles/sass/partials/_contact-page.scss
@@ -2,6 +2,71 @@
     width: 70%;
 }
 
+.contact {
+
+    p {
+        color: $lightGrey;
+    }
+
+    &__image {
+        max-width: 100%;
+        display: block;
+    }
+
+    &__touch {
+        h3 {
+            margin-bottom: 20px;
+        }
+    }
+
+    &__icons {
+        display: flex;
+        padding: 100px 50px;
+        justify-content: space-evenly;
+        
+        &--item {
+
+            h3 {
+                padding: 20px 0 10px 0;
+            }
+
+            p {
+                color: $lightGrey;
+            }
+
+            i {
+                font-size: 2rem;
+            }
+        }
+
+        &--item:nth-of-type(2) {
+            position: relative;
+        }
+
+        &--item:nth-of-type(2):before {
+            // background: yellow;
+            content: '';
+            position: absolute;
+            width: 2px;
+            height: 200px;
+            background: $offWhite;
+            left: -50px;
+            top: -20px;
+        }
+
+        &--item:nth-of-type(2)::after {
+            // background: yellow;
+            content: '';
+            position: absolute;
+            width: 2px;
+            height: 200px;
+            background: $offWhite;
+            right: -50px;
+            top: -20px;
+        }
+    }
+}
+
 header {
     
     .navigation-contact {
@@ -12,16 +77,44 @@ header {
 
 }
 
-.contact__title--container {
+.contact__title {
+    &--details {
+        width: 50%;
+
+        h3 {
+            margin-bottom: 20px;
+        }
+    } 
+}
+
+.contact__container {
     position: relative;
 
     h2 {
         font-size: 3rem;
         text-transform: uppercase;
         font-family: $montserrat;
+        position: relative;
+        top: -100px;
+
 
         span {
             display: block;
         }
+    }
+
+    h2::before {
+        content: '';
+        height: 5px;
+        width: 50px;
+        position: absolute;
+        top: -20px;
+        background: $black;
+    }
+
+    h3 {
+        text-transform: uppercase;
+        font-family: $montserrat;
+        font-weight: bold;
     }
 }
