--- a/styles/sass/partials/_navigation.scss
+++ b/styles/sass/partials/_navigation.scss
@@ -6,6 +6,11 @@
     text-transform: uppercase;
     font-family: $montserrat;
 
+    h1:hover {
+        transform: scale(1.1);
+        transition: all 0.3s ease-in-out;
+    }
+
     &__container {
         width: 20%;
     }
