--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,12 @@ a {
   text-transform: uppercase;
   font-family: "Montserrat", sans-serif;
 }
+.navigation h1:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
 .navigation__container {
   width: 20%;
 }
@@ -652,34 +658,58 @@ a {
   color: #999;
 }
 
-.comment__form h2 {
-  text-transform: uppercase;
-  font-family: "Montserrat", sans-serif;
-  padding: 50px 0;
-  position: relative;
-}
-.comment__form h2:after {
-  content: "";
-  height: 1px;
-  background: #999;
-  position: absolute;
-  width: 100%;
-  bottom: 30px;
-  left: 0;
-}
-
-#comment__form--name, #comment__form--email, #comment__form--subject {
-  border-top-style: none;
-  border-left-style: none;
-  border-right-style: none;
-  border-bottom: 1px solid #999;
-}
-#comment__form textarea {
-  display: block;
-}
-
 .wrapper {
   width: 70%;
+}
+
+.contact p {
+  color: #999;
+}
+.contact__image {
+  max-width: 100%;
+  display: block;
+}
+.contact__touch h3 {
+  margin-bottom: 20px;
+}
+.contact__icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 100px 50px;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+.contact__icons--item h3 {
+  padding: 20px 0 10px 0;
+}
+.contact__icons--item p {
+  color: #999;
+}
+.contact__icons--item i {
+  font-size: 2rem;
+}
+.contact__icons--item:nth-of-type(2) {
+  position: relative;
+}
+.contact__icons--item:nth-of-type(2):before {
+  content: "";
+  position: absolute;
+  width: 2px;
+  height: 200px;
+  background: #F6F6F6;
+  left: -50px;
+  top: -20px;
+}
+.contact__icons--item:nth-of-type(2)::after {
+  content: "";
+  position: absolute;
+  width: 2px;
+  height: 200px;
+  background: #F6F6F6;
+  right: -50px;
+  top: -20px;
 }
 
 header .navigation-contact {
@@ -690,16 +720,89 @@ header .navigation-contact {
   width: 100%;
 }
 
-.contact__title--container {
+.contact__title--details {
+  width: 50%;
+}
+.contact__title--details h3 {
+  margin-bottom: 20px;
+}
+
+.contact__container {
   position: relative;
 }
-.contact__title--container h2 {
+.contact__container h2 {
   font-size: 3rem;
   text-transform: uppercase;
   font-family: "Montserrat", sans-serif;
+  position: relative;
+  top: -100px;
 }
-.contact__title--container h2 span {
+.contact__container h2 span {
   display: block;
+}
+.contact__container h2::before {
+  content: "";
+  height: 5px;
+  width: 50px;
+  position: absolute;
+  top: -20px;
+  background: #333;
+}
+.contact__container h3 {
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+}
+
+#comment__form {
+  padding: 200px 0;
+}
+#comment__form h2 {
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  padding: 0 0 50px 0;
+  position: relative;
+}
+#comment__form h2:after {
+  content: "";
+  height: 1px;
+  background: #999;
+  position: absolute;
+  width: 100%;
+  bottom: 30px;
+  left: 0;
+}
+#comment__form--name, #comment__form--email, #comment__form--subject {
+  border-top-style: none;
+  border-left-style: none;
+  border-right-style: none;
+  border-bottom: 1px solid #999;
+  padding: 0 0 10px 0;
+  width: 32%;
+}
+
+.comment__form--container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.comment__form textarea {
+  display: block;
+  width: 100%;
+  margin: 50px 0;
+  border-style: none;
+  border-bottom: 1px solid #999;
+  resize: none;
+}
+.comment__form--button {
+  background: none;
+  border-style: none;
+  border-bottom: 1px solid #333;
+  text-transform: uppercase;
+  padding-bottom: 5px;
 }
 
 * {
