tweaked styles in branding/team sections

--- a/styles/sass/partials/_branding.scss
+++ b/styles/sass/partials/_branding.scss
@@ -1,26 +1,17 @@
 .branding {
     background: $lightSage;
 
-    &__container {
-        display: flex;
-        justify-content: center;
-        position: relative;
-        background: blueviolet;
-        margin: auto;
-        width: 100%;
-        max-width: 40%;
-    }
-
     &__image {
-        position: relative;
-        width: 100%;
-        padding: 100px;
+       width: 30%;
+       position: relative;
+       margin: 0 auto;
+       padding: 200px 0 100px 0;
 
-        &--top {
-            position: relative;
-            width: 50%;
+          &--top {
+            position: absolute;
             z-index: 1;
-            top: -100px;
+            width: 50%;
+            top: 100px;
             left: -100px;
             img {
                 width: 100%;
@@ -28,20 +19,20 @@
         }
 
         &--bottom {
-            position: absolute;
-            width: 100%;
-            top: 0;
+            position: relative;
             img {
                 width: 100%;
             }
         }
     }
 
+      
     &__content {
     display: flex;
     // background-color: chocolate;
     justify-content: center;
     width: 100%;
+    padding-bottom: 100px;
 
     &--left, &--right {
         font-family: $montserrat;
@@ -63,36 +54,4 @@
         }
     }
 }
-}
-
-// .homeImg-2 {
-//     width: 100%;
-//     margin: 40px;
-// }
-
-// .circle {
-//     max-width: 100%;
-//     position: absolute;
-//     left: calc(-5% + 1px);
-//     top: -85px;
-// }
-
-// .circle-img {
-//     max-width: 100%;
-// }
-
-
-
-.image-container-2 {
-    background-color: chocolate;
-    display: flex;
-    height: 500px;
-}
-
-.home-img-2 {
-    width: 20%;
-}
-
-.circle-img-2 {
-    width: 20%;
 }
