--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -1,5 +1,15 @@
 .contact {
     display: flex;
+    @media (max-width: 900px) {
+            flex-direction: column;
+    }
+
+    &__image {
+        width: 50%;
+        @media (max-width: 900px) {
+            width: 100%;
+        }
+    }
 
     &__content {
         background: $lightSage;
@@ -8,6 +18,14 @@
         align-items: center;
         justify-content: center;
         padding: 200px;
+        width: 50%;
+        @media (max-width: 1700px) {
+            padding: 100px;
+        }
+
+        @media (max-width: 900px) {
+            width: 100%;
+        }
 
         h4 {
             text-transform: uppercase;
