--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -10,6 +10,19 @@
         padding: 200px 0;
         // align-items: center;
         justify-content: space-between;
+        @media (max-width: 1600px) {
+            width: 80%;
+        }
+
+        @media (max-width: 1400px) {
+            width: 90%;
+        }
+
+        @media (max-width: 900px) {
+            width: 100%;
+            flex-direction: column;
+            align-items: center;
+        }
     }
 
     &__contact {
