--- a/styles/style.css
+++ b/styles/style.css
@@ -193,6 +193,11 @@ a {
   font-style: italic;
   line-height: 30px;
 }
+@media (max-width: 1200px) {
+  #slider p {
+    width: 100%;
+  }
+}
 #slider .wrapper {
   padding: 100px 0;
 }
@@ -211,6 +216,11 @@ a {
 .slider__container .fa-angle-left, .slider__container .fa-angle-right {
   font-size: 2.5rem;
   margin-bottom: 50px;
+}
+@media (max-width: 720px) {
+  .slider__container .fa-angle-left, .slider__container .fa-angle-right {
+    font-size: 2rem;
+  }
 }
 .slider__container .fa-angle-left:hover, .slider__container .fa-angle-right:hover {
   opacity: 0.5;
@@ -367,6 +377,22 @@ a {
   display: -ms-flexbox;
   display: flex;
 }
+@media (max-width: 900px) {
+  .contact {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+.contact__image {
+  width: 50%;
+}
+@media (max-width: 900px) {
+  .contact__image {
+    width: 100%;
+  }
+}
 .contact__content {
   background: #C3DAB7;
   display: -webkit-box;
@@ -383,6 +409,17 @@ a {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 200px;
+  width: 50%;
+}
+@media (max-width: 1700px) {
+  .contact__content {
+    padding: 100px;
+  }
+}
+@media (max-width: 900px) {
+  .contact__content {
+    width: 100%;
+  }
 }
 .contact__content h4 {
   text-transform: uppercase;
@@ -415,6 +452,28 @@ a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+@media (max-width: 1600px) {
+  .footer .wrapper {
+    width: 80%;
+  }
+}
+@media (max-width: 1400px) {
+  .footer .wrapper {
+    width: 90%;
+  }
+}
+@media (max-width: 900px) {
+  .footer .wrapper {
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 .footer__contact ul {
   margin: 40px 0 20px 0;
