fixed image paths

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -1,13 +1,13 @@
 
 #header-main {
-    background: url(../../../assets/home-1.jpeg);
+    background: url(../assets/home-1.jpeg);
     background-size: cover;
     background-position: center;
     height: 100vh;
 }
 
 #header__blog {
-  background: url(../../../assets/blog-1.jpeg);
+  background: url(../assets/blog-1.jpeg);
   background-size: cover;
     background-position: center;
     height: 100vh;  
