--- a/styles/sass/partials/_features.scss
+++ b/styles/sass/partials/_features.scss
@@ -1,5 +1,5 @@
 .features {
-    background: url(../../../assets/home-4.jpeg) no-repeat;
+    background: url(../assets/home-4.jpeg) no-repeat;
     background-size: cover;
     display: flex;
     justify-content: flex-end;
