--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -2,7 +2,7 @@
 './partials/header', './partials/navigation', './partials/utilities',
 './partials/branding', './partials/slider.scss', './partials/features',
 './partials/team', './partials/contact', './partials/footer', './partials/blog',
-'./partials/contact-page', './partials/form';
+'./partials/contact-page', './partials/form', './partials/mixins';
 
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
