--- a/styles/style.css
+++ b/styles/style.css
@@ -37,14 +37,14 @@ a {
 }
 
 #header-main {
-  background: url(../../../assets/home-1.jpeg);
+  background: url(../assets/home-1.jpeg);
   background-size: cover;
   background-position: center;
   height: 100vh;
 }
 
 #header__blog {
-  background: url(../../../assets/blog-1.jpeg);
+  background: url(../assets/blog-1.jpeg);
   background-size: cover;
   background-position: center;
   height: 100vh;
@@ -230,7 +230,7 @@ a {
 }
 
 .features {
-  background: url(../../../assets/home-4.jpeg) no-repeat;
+  background: url(../assets/home-4.jpeg) no-repeat;
   background-size: cover;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -697,7 +697,7 @@ a {
   color: #999;
 }
 .contact__image {
-  max-width: 100%;
+  width: 100%;
   display: block;
 }
 .contact__touch h3 {
